syntax = "proto3";
import "Protos/common_models.proto";
option csharp_namespace = "Server.ChatApp.Protos";
package ChatItemCommandsPkg;

service ChatItemCommandsRPCs{
	rpc Create(common.PersonMsg) returns(common.ResultMsg);
	rpc Remove(common.RowMsg) returns(common.ResultMsg);
}